Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0 Beta 2
-
None
-
macOS
-
4e612c7d3dbfebfaf3eac346aa5261760871a799
Description
In 5.10 the widget styles are delivered as plugins. macdeployqt does not deploy them, resulting in ugly fallback-style.
Attachments
For Gerrit Dashboard: QTBUG-64078 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
209646,2 | Fix styles deployment in macdeployqt | 5.10 | qt/qttools | Status: MERGED | +2 | 0 |