Fix styles deployment in macdeployqt

Task-number: QTBUG-64078
Change-Id: I2c23e440d6355effa384a56a215e92115be75a35
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Jake Petroules <jake.petroules@qt.io>